test/tests/nek_errors/invalid_transfer_pp/nek.i
[Problem]
  type = NekRSProblem
  minimize_transfers_in = true
[]

[Mesh]
  type = NekRSMesh
  boundary = '4'
[]

[Executioner]
  type = Transient

  [TimeStepper]
    type = NekTimeStepper
  []
[]

[Outputs]
  exodus = true
  execute_on = 'final'
[]
